# ticket_backend

./: .gitignore  Untitled.ipynb  main.py  pyproject.toml
app/: crud.py  database.py  main.py  member.db  models.py  schemas.py  security.py
static/: index.html
